Opened 14 years ago
Closed 13 years ago
#1928 closed defect (fixed)
ape: fix seeking (with ffplay)
| Reported by: | ami_stuff | Owned by: | Marton Balint |
|---|---|---|---|
| Priority: | normal | Component: | ffplay |
| Version: | git-master | Keywords: | ape seek |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
seeking doesn't work too good and takes too long time compared for example to foobar2000
http://streams.videolan.org/issues/6348/Goldwave-MAClib.ape
C:\>ffmpeg -i Goldwave-MAClib.ape
ffmpeg version N-46755-ge70144c Copyright (c) 2000-2012 the FFmpeg developers
built on Nov 15 2012 02:38:20 with gcc 4.5.0 (GCC) 20100414 (Fedora MinGW 4.5.
0-1.fc14)
configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch=
x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min
gw32-gcc' --enable-w32threads --enable-memalign-hack --enable-runtime-cpudetect
--enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 -
lwinmm -lpthread' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snap
shots/build/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/s
napshots/build/lib' --enable-bzlib --enable-zlib --enable-gpl --enable-version3
--enable-nonfree --enable-libx264 --enable-libspeex --enable-libtheora --enable-
libvorbis --enable-libfaac --enable-libxvid --enable-libopencore-amrnb --enable-
libopencore-amrwb --enable-libmp3lame --enable-libvpx --disable-decoder=libvpx
libavutil 52. 6.100 / 52. 6.100
libavcodec 54. 71.100 / 54. 71.100
libavformat 54. 36.100 / 54. 36.100
libavdevice 54. 3.100 / 54. 3.100
libavfilter 3. 23.100 / 3. 23.100
libswscale 2. 1.102 / 2. 1.102
libswresample 0. 16.100 / 0. 16.100
libpostproc 52. 1.100 / 52. 1.100
Input #0, ape, from 'Goldwave-MAClib.ape':
Metadata:
Track : 1
Year : 1983
Genre : Rock
Artist : YES
Album : 90125
Title : Owner of a Lonely Heart
Duration: 00:00:29.32, start: 0.000000, bitrate: 837 kb/s
Stream #0:0: Audio: ape (APE / 0x20455041), 44100 Hz, stereo, s16p
At least one output file must be specified
Change History (4)
comment:1 by , 14 years ago
| Keywords: | ape seek added |
|---|---|
| Reproduced by developer: | set |
| Status: | new → open |
| Version: | unspecified → git-master |
comment:2 by , 13 years ago
| Component: | undetermined → FFplay |
|---|
comment:3 by , 13 years ago
| Owner: | set to |
|---|
Note:
See TracTickets
for help on using tickets.



Pressing "down" after 14 seconds let the player continue to play until ~20:00 seconds before seeking.