ffplay: drop remaining frames in current audio avpacket when seeking

Fixes ticket #1928.

Signed-off-by: Marton Balint <cus@passwd.hu>